--- a/starship.toml
+++ b/starship.toml
@@ -84,7 +84,7 @@ truncation_symbol = "…/"
 "Downloads" = " "
 "Music" = "󰝚 "
 "Pictures" = " "
-"Code" = "󰲋 "
+"code" = "󰲋 "
 "Desktop" = "󰇄"
 "Videos" = ""
 "Public" = ""
